# NRF5340_SensorNode

./: CMakeLists.txt  Kconfig  nrf5340dk_nrf5340_cpuapp_ns.overlay  prj.conf  sysbuild.conf
src/: CMakeLists.txt  defines.h  gpio_helper.h  main.c
src/cbluetooth/: CMakeLists.txt
src/cgpio/: CMakeLists.txt  gpio_helper.c
